--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "scripts": {
     "build": "rollup -c",
     "dev": "rollup -c -w",
-    "start": "sirv public"
+    "start": "sirv public",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d public"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^17.0.0",
@@ -17,6 +19,7 @@
     "svelte": "^3.0.0"
   },
   "dependencies": {
+    "gh-pages": "^3.1.0",
     "sirv-cli": "^1.0.0"
   }
 }
